# PDF-and-EPUB-extraction-pipeline-for-GPU-and-CPU

./: .dockerignore  .gitignore  Dockerfile  README.md  bud_api_table_extract.py  docker-compose.yml  example.env  get_publisher_books.py  gpu_docker_compose.yml  gpu_docker_compose_n.yml  microsoft_publication_epub.py  model_api_server.py  model_loader.py  nougat.py  nougat_checkpoint.py  oct_epub.py  oreilly_epub.py  post_process.py  process_epub.py  process_pdf.py  processpdf.py  pyproject.toml  rabbitmq_compose.yml  requirements.txt  tablecaption.py  test.py  update_math_tag.py  utils.py  wiley_publication_epub.py
code/: FigCap.py  pdf_info.py  renderer.py  xpdf_process.py
epub_extraction/: Project_publication_epub.py  addbooks.py  amacom_epub.py  apress_epub.py  check.py  check_condition.py  extract_epub_table.py  ft_publication_epub.py  harvad_epub.py  mcgraw_epub.py  microsoft_publication_epub.py  oct_epub.py  oreilly_epub.py  test.py  update_math_tag.py  utils.py  wiley_pattern2_epub.py  wiley_publication_epub.py
math_latex/: app.js  package-lock.json  package.json
pdf_pipeline/: Readme.md  add_book_tables.py  book_completion_consumer.py  bud_ocr_consumer.py  check_ptm_comsuer.py  check_ptm_consumer.py  delete_queues.py  element_extraction_utils.py  error_consumer.py  latex_ocr_comsumer.py  latex_ocr_consumer.py  mfd_consumer.py  nougat_8513_test_consumer.py  nougat_check.py  nougat_consumer.py  nougat_pdf_queue_consumer.py  nougat_test_consumer.py  other_pages_consumer.py  page_extraction_consumer.py  pdf_consumer.py  pdf_producer.py  pdfconsumer.py  (+13 more)
(+4 files in other folders)
