[tool.poetry]
name = "pdf-extraction-pipeline"
version = "0.1.0"
description = ""
authors = ["sonalidevbud <sonali.gupta@devbud.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
boto3 = "^1.34.14"
pika = "^1.3.2"
opencv-python = "^4.9.0.80"
pymongo = "^4.6.1"
pypdf2 = "^3.0.1"
pymupdf = "^1.23.8"
layoutparser = {extras = ["ocr"], version = "^0.3.4"}
pillow = "9.5.0"
pix2tex = "^0.1.2"
latext = "^0.0.7"
beautifulsoup4 = "^4.12.2"
img2pdf = "^0.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
